--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,15 @@ h2:hover {
     -elements, 5th
     -pseudo-elements (like a), 5th
  */
+.contact-form__input:first-child {
+    color: #821b1b;
+}
+
+.contact-form__input:last-child {
+    color: #1a9f27;
+}
+.contact-form__input--password_active {
+    color:#d2691e;
+}
+/*BEM methodology has this format, when it is differente from the rest, use - if it's a tag and -- for a name*/
+
